force-app/main/default/objects/Verification__c/fields/Aadhaar_Address__c.field-meta.xml
<CustomField>
    <fullName>Aadhaar_Address__c</fullName>
    <label>Aadhaar Address</label>
    <type>TextArea</type>
</CustomField>