force-app/main/default/objects/Verification__c/fields/Aadhaar_DOB__c.field-meta.xml
<CustomField>
    <fullName>Aadhaar_DOB__c</fullName>
    <label>Aadhaar DOB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>