force-app/main/default/objects/Verification__c/fields/Aadhaar_Name__c.field-meta.xml
<CustomField>
    <fullName>Aadhaar_Name__c</fullName>
    <label>Aadhaar Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>