force-app/main/default/objects/Verification__c/fields/Aadhaar_Number__c.field-meta.xml
<CustomField>
    <fullName>Aadhaar_Number__c</fullName>
    <inlineHelpText>Masked Aadhaar Number via API</inlineHelpText>
    <label>Aadhaar Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>