force-app/main/default/objects/Verification__c/fields/Aadhaar_OTP__c.field-meta.xml
<CustomField>
    <fullName>Aadhaar_OTP__c</fullName>
    <label>Aadhaar OTP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>