force-app/main/default/objects/Verification__c/fields/Aadhaar_OTP_Request_ID__c.field-meta.xml
<CustomField>
    <fullName>Aadhaar_OTP_Request_ID__c</fullName>
    <label>Aadhaar OTP Request ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>