force-app/main/default/objects/Verification__c/fields/Aadhaar_Public_Link__c.field-meta.xml
<CustomField>
    <fullName>Aadhaar_Public_Link__c</fullName>
    <formula>HYPERLINK( $Label.CV_Portal_URL+&quot;UB_AadhaarVerification?id=&quot;+Id , &quot;Verify OTP&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Please use the hyperlink provided to enter your Aadhaar OTP.</inlineHelpText>
    <label>Aadhaar Public Link</label>
    <type>Text</type>
</CustomField>