force-app/main/default/objects/Verification__c/fields/Annual_Premium_With_Tax__c.field-meta.xml
<CustomField>
    <fullName>Annual_Premium_With_Tax__c</fullName>
    <label>Annual Premium With Tax</label>
    <length>200</length>
    <type>Text</type>
</CustomField>