force-app/main/default/objects/Verification__c/fields/APPLICATION_ID__c.field-meta.xml
<CustomField>
    <fullName>APPLICATION_ID__c</fullName>
    <label>APPLICATION_ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>