force-app/main/default/objects/Verification__c/fields/Base_Premium__c.field-meta.xml
<CustomField>
    <fullName>Base_Premium__c</fullName>
    <label>Base Premium</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>