force-app/main/default/objects/Verification__c/fields/BRE_Decision__c.field-meta.xml
<CustomField>
    <fullName>BRE_Decision__c</fullName>
    <label>BRE Decision</label>
    <length>50</length>
    <type>Text</type>
</CustomField>