force-app/main/default/objects/Verification__c/fields/CFR_Fraud_Information__c.field-meta.xml
<CustomField>
    <fullName>CFR_Fraud_Information__c</fullName>
    <label>CFR Fraud Information</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>