force-app/main/default/objects/Verification__c/fields/CFR_Status__c.field-meta.xml
<CustomField>
    <fullName>CFR_Status__c</fullName>
    <label>CFR Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fraud Found</fullName>
            </value>
            <value>
                <fullName>Fraud Not Found</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>