force-app/main/default/objects/Verification__c/fields/Cibil_Score__c.field-meta.xml
<CustomField>
    <fullName>Cibil_Score__c</fullName>
    <label>CIBIL Score</label>
    <length>200</length>
    <type>Text</type>
</CustomField>