force-app/main/default/objects/Verification__c/fields/Consent__c.field-meta.xml
<CustomField>
    <fullName>Consent__c</fullName>
    <label>Consent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>