force-app/main/default/objects/Verification__c/fields/Dedupe_Address__c.field-meta.xml
<CustomField>
    <fullName>Dedupe_Address__c</fullName>
    <label>Address From CBS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>