force-app/main/default/objects/Verification__c/fields/Dedupe_Response_Id__c.field-meta.xml
<CustomField>
    <fullName>Dedupe_Response_Id__c</fullName>
    <label>Dedupe Response Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>