force-app/main/default/objects/Verification__c/fields/Dedupe_Status__c.field-meta.xml
<CustomField>
    <fullName>Dedupe_Status__c</fullName>
    <label>Dedupe Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MATCH FOUND</fullName>
            </value>
            <value>
                <fullName>NO MATCH FOUND</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>