force-app/main/default/objects/Verification__c/fields/DocumentId__c.field-meta.xml
<CustomField>
    <fullName>DocumentId__c</fullName>
    <label>DocumentId</label>
    <length>200</length>
    <type>Text</type>
</CustomField>