force-app/main/default/objects/Verification__c/fields/E_Nach_API_Status__c.field-meta.xml
<CustomField>
    <fullName>E_Nach_API_Status__c</fullName>
    <label>E-Nach API Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>