force-app/main/default/objects/Verification__c/fields/E_Nach_Reference__c.field-meta.xml
<CustomField>
    <fullName>E_Nach_Reference__c</fullName>
    <label>E-Nach Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>