force-app/main/default/objects/Verification__c/fields/E_Nach_Status__c.field-meta.xml
<CustomField>
    <fullName>E_Nach_Status__c</fullName>
    <label>E-Nach Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initiated</fullName>
            </value>
            <value>
                <fullName>Progressed By User</fullName>
            </value>
            <value>
                <fullName>Rejected By NPCI</fullName>
            </value>
            <value>
                <fullName>Authorization Request Rejected</fullName>
            </value>
            <value>
                <fullName>Authorized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>