force-app/main/default/objects/Verification__c/fields/Failed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Failed_Reason__c</fullName>
    <label>Failed Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>