force-app/main/default/objects/Verification__c/fields/FIle_Id__c.field-meta.xml
<CustomField>
    <fullName>FIle_Id__c</fullName>
    <label>FIle Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>