force-app/main/default/objects/Verification__c/fields/FINAL_SCORE__c.field-meta.xml
<CustomField>
    <fullName>FINAL_SCORE__c</fullName>
    <label>FINAL_SCORE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>