force-app/main/default/objects/Verification__c/fields/GUID__c.field-meta.xml
<CustomField>
    <fullName>GUID__c</fullName>
    <label>GUID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>