force-app/main/default/objects/Verification__c/fields/GUID_Submit_Date__c.field-meta.xml
<CustomField>
    <fullName>GUID_Submit_Date__c</fullName>
    <label>GUID Submit Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>