force-app/main/default/objects/Verification__c/fields/Hunter_Response__c.field-meta.xml
<CustomField>
    <fullName>Hunter_Response__c</fullName>
    <label>Hunter Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>