force-app/main/default/objects/Verification__c/fields/Hunter_Status__c.field-meta.xml
<CustomField>
    <fullName>Hunter_Status__c</fullName>
    <label>Hunter Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initiated</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>