force-app/main/default/objects/Verification__c/fields/Hunter_Summary_Match__c.field-meta.xml
<CustomField>
    <fullName>Hunter_Summary_Match__c</fullName>
    <label>Hunter Summary Match</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Found</fullName>
            </value>
            <value>
                <fullName>Match Found</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>