force-app/main/default/objects/Verification__c/fields/Hunter_Total_Match_Score__c.field-meta.xml
<CustomField>
    <fullName>Hunter_Total_Match_Score__c</fullName>
    <label>Hunter Total Match Score</label>
    <length>10</length>
    <type>Text</type>
</CustomField>