force-app/main/default/objects/Verification__c/fields/ICICI_Partner_URL__c.field-meta.xml
<CustomField>
    <fullName>ICICI_Partner_URL__c</fullName>
    <label>ICICI Partner URL</label>
    <type>Url</type>
</CustomField>