force-app/main/default/objects/Verification__c/fields/IFSC_Code__c.field-meta.xml
<CustomField>
    <fullName>IFSC_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IFSC Code</label>
    <referenceTo>IFSC_Master__c</referenceTo>
    <relationshipLabel>Verifications</relationshipLabel>
    <relationshipName>Verifications</relationshipName>
    <type>Lookup</type>
</CustomField>