force-app/main/default/objects/Verification__c/fields/Is_Aadhar_Linked__c.field-meta.xml
<CustomField>
    <fullName>Is_Aadhar_Linked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Aadhar Linked?</label>
    <type>Checkbox</type>
</CustomField>