force-app/main/default/objects/Verification__c/fields/Is_DOB_Matched__c.field-meta.xml
<CustomField>
    <fullName>Is_DOB_Matched__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is DOB Matched?</label>
    <type>Checkbox</type>
</CustomField>