force-app/main/default/objects/Verification__c/fields/Is_Duplicate__c.field-meta.xml
<CustomField>
    <fullName>Is_Duplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Duplicate?</label>
    <type>Checkbox</type>
</CustomField>