force-app/main/default/objects/Verification__c/fields/Is_Medical__c.field-meta.xml
<CustomField>
    <fullName>Is_Medical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Medical</label>
    <type>Checkbox</type>
</CustomField>