force-app/main/default/objects/Verification__c/fields/Is_Report_available__c.field-meta.xml
<CustomField>
    <fullName>Is_Report_available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Report available ?</label>
    <type>Checkbox</type>
</CustomField>