force-app/main/default/objects/Verification__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead__c</referenceTo>
    <relationshipLabel>Verifications</relationshipLabel>
    <relationshipName>Verifications</relationshipName>
    <type>Lookup</type>
</CustomField>