force-app/main/default/objects/Verification__c/fields/Loan_Application__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+Loan_Applicant__r.Loan_Application__c, Loan_Applicant__r.Loan_Application__r.Name,
&quot;_self&quot;)</formula>
    <label>Loan Application</label>
    <type>Text</type>
</CustomField>