force-app/main/default/objects/Verification__c/fields/Modal_Premium__c.field-meta.xml
<CustomField>
    <fullName>Modal_Premium__c</fullName>
    <label>Modal Premium</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>