force-app/main/default/objects/Verification__c/fields/OTP_Sent__c.field-meta.xml
<CustomField>
    <fullName>OTP_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>OTP is sent to the customer&apos;s registered mobile number.</inlineHelpText>
    <label>OTP Sent</label>
    <type>Checkbox</type>
</CustomField>