force-app/main/default/objects/Verification__c/fields/PAN_DOB__c.field-meta.xml
<CustomField>
    <fullName>PAN_DOB__c</fullName>
    <label>PAN DOB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>