force-app/main/default/objects/Verification__c/fields/PAN_Name__c.field-meta.xml
<CustomField>
    <fullName>PAN_Name__c</fullName>
    <label>PAN Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>