force-app/main/default/objects/Verification__c/fields/PAN_Status__c.field-meta.xml
<CustomField>
    <fullName>PAN_Status__c</fullName>
    <label>PAN Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>