force-app/main/default/objects/Verification__c/fields/Perfios_API_Status__c.field-meta.xml
<CustomField>
    <fullName>Perfios_API_Status__c</fullName>
    <label>Perfios Transaction Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COMPLETED</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
            <value>
                <fullName>ERROR_USER</fullName>
            </value>
            <value>
                <fullName>ERROR_SITE</fullName>
            </value>
            <value>
                <fullName>ERROR_SESSION_EXPIRED</fullName>
            </value>
            <value>
                <fullName>CANCELLED</fullName>
            </value>
            <value>
                <fullName>REJECTED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>