force-app/main/default/objects/Verification__c/fields/Perfios_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Perfios_Transaction_Id__c</fullName>
    <label>Perfios Transaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>