force-app/main/default/objects/Verification__c/fields/Premium_Paying_Term__c.field-meta.xml
<CustomField>
    <fullName>Premium_Paying_Term__c</fullName>
    <label>Premium Paying Term</label>
    <length>10</length>
    <type>Text</type>
</CustomField>