force-app/main/default/objects/Verification__c/fields/Processing_Files_Done__c.field-meta.xml
<CustomField>
    <fullName>Processing_Files_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processing Files Done</label>
    <type>Checkbox</type>
</CustomField>