force-app/main/default/objects/Verification__c/fields/Response_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Response_Remarks__c</fullName>
    <label>Response_Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>