force-app/main/default/objects/Verification__c/fields/Sherlock_Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Sherlock_Case_Id__c</fullName>
    <label>Sherlock Case Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>