force-app/main/default/objects/Verification__c/fields/Sherlock_Rules_Details__c.field-meta.xml
<CustomField>
    <fullName>Sherlock_Rules_Details__c</fullName>
    <label>Sherlock Rules Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>