force-app/main/default/objects/Verification__c/fields/SherLock_Status__c.field-meta.xml
<CustomField>
    <fullName>SherLock_Status__c</fullName>
    <label>SherLock Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APPROVED</fullName>
            </value>
            <value>
                <fullName>REFER</fullName>
            </value>
            <value>
                <fullName>REJECT</fullName>
            </value>
            <value>
                <fullName>IN PROCESS</fullName>
            </value>
            <value>
                <fullName>API FAILED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>