force-app/main/default/objects/Verification__c/fields/SherLock_Verification_Summary__c.field-meta.xml
<CustomField>
    <fullName>SherLock_Verification_Summary__c</fullName>
    <label>SherLock Verification Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>