force-app/main/default/objects/Verification__c/fields/Total_First_Premium__c.field-meta.xml
<CustomField>
    <fullName>Total_First_Premium__c</fullName>
    <label>Total First Premium</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>