force-app/main/default/objects/Verification__c/fields/UCID__c.field-meta.xml
<CustomField>
    <fullName>UCID__c</fullName>
    <label>UCID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>