force-app/main/default/objects/Verification__c/fields/UMRN__c.field-meta.xml
<CustomField>
    <fullName>UMRN__c</fullName>
    <label>UMRN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>