force-app/main/default/objects/Verification__c/fields/V1__c.field-meta.xml
<CustomField>
    <fullName>V1__c</fullName>
    <label>V1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>