force-app/main/default/objects/Verification__c/fields/V2__c.field-meta.xml
<CustomField>
    <fullName>V2__c</fullName>
    <label>V2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>