force-app/main/default/objects/Verification__c/fields/V3__c.field-meta.xml
<CustomField>
    <fullName>V3__c</fullName>
    <label>V3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>