force-app/main/default/objects/Verification__c/recordTypes/Aadhaar_Verification.recordType-meta.xml
<RecordType>
    <fullName>Aadhaar_Verification</fullName>
    <active>true</active>
    <label>Aadhaar Verification</label>
</RecordType>