force-app/main/default/objects/Verification__c/recordTypes/CBS_Verification.recordType-meta.xml
<RecordType>
    <fullName>CBS_Verification</fullName>
    <active>true</active>
    <label>CBS Verification</label>
</RecordType>