force-app/main/default/objects/Verification__c/recordTypes/CFR_Verification.recordType-meta.xml
<RecordType>
    <fullName>CFR_Verification</fullName>
    <active>true</active>
    <label>CFR Verification</label>
</RecordType>