force-app/main/default/objects/Verification__c/recordTypes/CIBIL_Check.recordType-meta.xml
<RecordType>
    <fullName>CIBIL_Check</fullName>
    <active>true</active>
    <label>CIBIL Check</label>
</RecordType>