force-app/main/default/objects/Verification__c/recordTypes/Consent_Check.recordType-meta.xml
<RecordType>
    <fullName>Consent_Check</fullName>
    <active>true</active>
    <label>Consent Check</label>
</RecordType>