force-app/main/default/objects/Verification__c/recordTypes/Dedupe_Check.recordType-meta.xml
<RecordType>
    <fullName>Dedupe_Check</fullName>
    <active>true</active>
    <label>Dedupe Check</label>
</RecordType>