force-app/main/default/objects/Verification__c/recordTypes/E_Nach.recordType-meta.xml
<RecordType>
    <fullName>E_Nach</fullName>
    <active>true</active>
    <label>E-Nach</label>
</RecordType>