force-app/main/default/objects/Verification__c/recordTypes/HUNTER_API.recordType-meta.xml
<RecordType>
    <fullName>HUNTER_API</fullName>
    <active>true</active>
    <label>HUNTER API</label>
</RecordType>