force-app/main/default/objects/Verification__c/recordTypes/Leegality.recordType-meta.xml
<RecordType>
    <fullName>Leegality</fullName>
    <active>true</active>
    <label>Leegality</label>
</RecordType>