force-app/main/default/objects/Verification__c/recordTypes/MCA_Documents.recordType-meta.xml
<RecordType>
    <fullName>MCA_Documents</fullName>
    <active>true</active>
    <label>MCA-Documents</label>
</RecordType>