force-app/main/default/objects/Verification__c/recordTypes/PAN_Verification.recordType-meta.xml
<RecordType>
    <fullName>PAN_Verification</fullName>
    <active>true</active>
    <label>PAN Verification</label>
</RecordType>