force-app/main/default/objects/Verification__c/recordTypes/Partner_Api_Verification.recordType-meta.xml
<RecordType>
    <fullName>Partner_Api_Verification</fullName>
    <active>true</active>
    <label>Partner Api Verification</label>
</RecordType>