force-app/main/default/objects/Verification__c/recordTypes/Perfios_API.recordType-meta.xml
<RecordType>
    <fullName>Perfios_API</fullName>
    <active>true</active>
    <label>Perfios API</label>
</RecordType>