force-app/main/default/objects/Verification__c/recordTypes/Quote_Check.recordType-meta.xml
<RecordType>
    <fullName>Quote_Check</fullName>
    <active>true</active>
    <label>Quote Check</label>
</RecordType>