force-app/main/default/objects/Verification__c/recordTypes/ScoreCard.recordType-meta.xml
<RecordType>
    <fullName>ScoreCard</fullName>
    <active>true</active>
    <label>ScoreCard</label>
</RecordType>