force-app/main/default/objects/Verification__c/recordTypes/Sherlock_Verification.recordType-meta.xml
<RecordType>
    <fullName>Sherlock_Verification</fullName>
    <active>true</active>
    <label>Sherlock  Verification</label>
</RecordType>