force-app/main/default/objects/Verification__c/recordTypes/Udyam_Check.recordType-meta.xml
<RecordType>
    <fullName>Udyam_Check</fullName>
    <active>true</active>
    <label>Udyam Check</label>
</RecordType>