force-app/main/default/objects/Verification__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Dedupe_Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Loan_Applicant__c</columns>
    <columns>Status__c</columns>
    <columns>PAN_Status__c</columns>
    <columns>Is_DOB_Matched__c</columns>
    <columns>Is_Duplicate__c</columns>
    <columns>Is_Name_Matched__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>